@@ -219,7 +219,9 @@ class cmd_svn_import(Command):
                          help='Branching scheme (none, trunk, etc). '
                               'Default: auto.'),
                      Option('keep', 
-                            help="Don't delete branches removed in Subversion"),
+                         help="Don't delete branches removed in Subversion."),
+                     Option('incremental',
+                         help="Import revisions incrementally."),
                      Option('prefix', type=str, 
                          help='Only consider branches of which path starts '
                               'with prefix.')
@@ -227,7 +229,8 @@ class cmd_svn_import(Command):
 
     @display_command
     def run(self, from_location, to_location=None, trees=False, 
-            standalone=False, scheme=None, all=False, prefix=None, keep=False):
+            standalone=False, scheme=None, all=False, prefix=None, keep=False,
+            incremental=False):
         from bzrlib.branch import Branch
         from bzrlib.bzrdir import BzrDir
         from bzrlib.errors import BzrCommandError, NoRepositoryPresent, NotBranchError
@@ -289,7 +292,7 @@ class cmd_svn_import(Command):
             convert_repository(from_repos, to_location, scheme, None, 
                                not standalone, trees, all, 
                                filter_branch=filter_branch,
-                               keep=keep)
+                               keep=keep, incremental=incremental)
 
             if tmp_repos is not None:
                 from bzrlib import osutils
