@@ -18,6 +18,8 @@ bzr-svn-0.4.11	UNRELEASED
      (#246243). The --keep option can be specified to keep 
 	 branches removed in Subversion around.
 
+   * add --incremental option to bzr-svn for incremental imports.
+
 bzr-svn 0.4.11~rc1	2008-08-08
 
   CHANGES
